# ClawStation

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FLAKY_TESTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  PLUGINS.md  QUALITY-IMPROVEMENT.md  QUALITY.md  QUALITY_STATUS.md  ROADMAP.md  USER_GUIDE.md  WORKFLOW.md
docs/api/: tauri-commands.md
scripts/: build.ps1  build.sh  codex-fix.sh  doc-check.js  generate-api-docs.sh  install-git-hooks.sh  layer-lint.js  pre-commit-check.sh  pre-push-check.sh  quality-check.sh  release-gate.js  release.sh  self-review.sh  tauri-command-lint.js  test-coverage.sh  toolchain-check.sh  update-quality.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  canvas.rs  files.rs  gateway.rs  lib.rs  main.rs  sessions.rs  settings.rs  system.rs
src-tauri/src/plugins/: commands.rs  loader.rs  manager.rs  mod.rs  sandbox.rs  tests.rs  types.rs
src-tauri/tests/: gateway_test.rs
src/components/canvas/: CanvasPanel.tsx
src/components/chat/: ChatPanel.tsx  InputArea.tsx  MessageItem.tsx  MessageList.tsx
src/lib/: api.ts
src/plugins/: PluginLoader.ts  PluginManager.ts  PluginSandbox.ts  index.ts
src/stores/: agentStore.ts  gatewayStore.ts  sessionStore.ts  uiStore.ts
src/types/: gateway.ts  index.ts  plugin.ts
(+32 files in other folders)
