[package]
name = "clawstation"
version = "1.0.2"
description = "OpenClaw Desktop Client"
authors = ["OpenClaw"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "clawstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0"
notify = "8.0"
base64 = "0.22"
url = "2.5"
chrono = "0.4"
once_cell = "1.19"
tempfile = "3.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true

# Optimize for binary size
[profile.bench]
inherits = "release"
lto = "thin"

[profile.dev]
opt-level = 0
